@@ -26,7 +26,8 @@ class Smarty_Internal_Compile_Block extends Smarty_Internal_CompileBase {
         $this->optional_attributes = array('assign'); 
         // check and get attributes
         $_attr = $this->_get_attributes($args);
-        $this->_open_tag('block', $_attr);
+        $save = array($_attr, $compiler->template->extracted_compiled_code, $compiler->template->extract_code); 
+        $this->_open_tag('block', $save);
         $compiler->template->extract_code = true;
         $compiler->template->extracted_compiled_code = '';
         $compiler->template->has_code = false; 
